<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>azure-autorest-parent</artifactId>
    <groupId>com.azure.tools</groupId>
    <version>1.0.0-beta.4</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <groupId>com.azure.tools</groupId>
  <artifactId>azure-autorest-postprocessor</artifactId>
  <version>1.0.0-beta.1</version>

  <repositories>
    <repository>
      <id>azuresdkmaven</id>
      <url>https://azuresdkmaven.blob.core.windows.net/maven2</url>
    </repository>
  </repositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.13.5</version>
    </dependency>
    <dependency>
      <groupId>com.azure.tools</groupId>
      <artifactId>azure-autorest-extension</artifactId>
      <version>1.0.0-beta.4</version>
    </dependency>
    <dependency>
      <groupId>com.azure.tools</groupId>
      <artifactId>azure-autorest-customization</artifactId>
      <version>1.0.0-beta.7</version>
    </dependency>
    <dependency>
      <groupId>com.azure.tools</groupId>
      <artifactId>azure-autorest-partial-update</artifactId>
      <version>1.0.0-beta.1</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>1.7.36</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <!-- Use -Dlocal to enable this profile when running autorest.java locally -->
    <profile>
      <id>local</id>
      <activation>
        <property>
          <name>local</name>
        </property>
      </activation>
      <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <archive>
                    <manifest>
                      <mainClass>com.azure.autorest.postprocessor.Main</mainClass>
                    </manifest>
                  </archive>
                  <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                  </descriptorRefs>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
